# HarryPotter

./: CMakeLists.txt  CalculateCheckSumDialog.cpp  CalculateCheckSumDialog.h  ConvertDataDialog.cpp  ConvertDataDialog.h  FrameInfoDialog.cpp  FrameInfoDialog.h  README.md  dark_orange.qss  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h
data/: AbstractReadWriter.cpp  AbstractReadWriter.h  BridgeReadWriter.cpp  BridgeReadWriter.h  SerialBridgeReadWriter.cpp  SerialBridgeReadWriter.h  SerialReadWriter.cpp  SerialReadWriter.h  TcpClientReadWriter.cpp  TcpClientReadWriter.h  TcpServerReadWriter.cpp  TcpServerReadWriter.h
serial/: FixedBytesSerialController.cpp  FixedBytesSerialController.h  FrameSerialController.cpp  FrameSerialController.h  LineSerialController.cpp  LineSerialController.h  NormalSerialController.cpp  NormalSerialController.h  SerialController.cpp  SerialController.h
